Tracking Dashboard. Can not be compiled due to Failed to minify the code from this file: ./node_modules/ml-matrix/src/matrix.js:7

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.5",
+    "mqtt": "^2.16.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3",
+    "trilat": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
