Disabled js uglify/minify, enabled gz compression.

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -94,5 +94,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "compression-webpack-plugin": "^1.1.10"
   }
 }
